--- a/TCPharmacyFrontend/package.json
+++ b/TCPharmacyFrontend/package.json
@@ -20,7 +20,9 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "^3.15.4",
     "react-native-safe-area-context": "4.10.5",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10"
   },
