--- a/TCPharmacyFrontend/package.json
+++ b/TCPharmacyFrontend/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.6.8",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
@@ -25,7 +26,8 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
