--- a/TCPharmacyFrontend/package.json
+++ b/TCPharmacyFrontend/package.json
@@ -21,7 +21,9 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.5",
+    "react-native-radio-buttons-group": "^3.1.0",
     "react-native-reanimated": "^3.15.4",
     "react-native-safe-area-context": "4.10.5",
     "react-native-snap-carousel": "^4.0.0-beta.6",
