--- a/TCPharmacyFrontend/package.json
+++ b/TCPharmacyFrontend/package.json
@@ -26,9 +26,11 @@
     "react-native-image-picker": "^7.1.2",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.12.5",
+    "react-native-picker-select": "^9.3.1",
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-reanimated": "^3.15.4",
     "react-native-safe-area-context": "4.10.5",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
