--- a/TCPharmacyFrontend/package.json
+++ b/TCPharmacyFrontend/package.json
@@ -18,6 +18,8 @@
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.6.8",
     "expo": "~51.0.28",
+    "expo-network": "^6.0.1",
+    "expo-secure-store": "~13.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -33,10 +35,10 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-snap-carousel": "^4.0.0-beta.6",
+    "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2",
-    "expo-secure-store": "~13.0.1"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
