--- a/TCPharmacyBackend/src/main/resources/application.properties
+++ b/TCPharmacyBackend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=TCPharmacyBackend
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/pharmacies
 spring.datasource.username=root
-spring.datasource.password=sapassword
+spring.datasource.password=root
 
 server.port=9090
 spring.jpa.show-sql=true
