--- a/TCPharmacyBackend/build.gradle
+++ b/TCPharmacyBackend/build.gradle
@@ -54,6 +54,12 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	// Apache Commons Math for Cosine Similarity calculation
+	implementation 'org.apache.mahout:mahout-math:0.13.0'
+
+// https://mvnrepository.com/artifact/org.apache.mahout/mahout-core
+	implementation 'org.apache.mahout:mahout-core:0.9'
 }
 
 tasks.named('test') {
