--- a/TCPharmacyBackend/build.gradle
+++ b/TCPharmacyBackend/build.gradle
@@ -60,6 +60,7 @@ dependencies {
 
 // https://mvnrepository.com/artifact/org.apache.mahout/mahout-core
 	implementation 'org.apache.mahout:mahout-core:0.9'
+	implementation 'org.apache.commons:commons-csv:1.8'
 }
 
 tasks.named('test') {
