--- a/TCPharmacyBackend/src/main/resources/application.properties
+++ b/TCPharmacyBackend/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 chatgpt.model=gpt-3.5-turbo-1106
 
-chatgpt.key=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
+chatgpt.key=
 
 chatgpt.assistants=https://api.openai.com/v1/assistants
 chatgpt.threads=https://api.openai.com/v1/threads
