Updated: Using GPT to improve code performance

--- a/TCPharmacyBackend/src/main/resources/application.properties
+++ b/TCPharmacyBackend/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 chatgpt.model=gpt-3.5-turbo-1106
 
-chatgpt.key=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
+chatgpt.key=<your-api-chat-gpt-key>
 
 chatgpt.assistants=https://api.openai.com/v1/assistants
 chatgpt.threads=https://api.openai.com/v1/threads
