--- a/TCPharmacyBackend/build.gradle
+++ b/TCPharmacyBackend/build.gradle
@@ -64,6 +64,8 @@ dependencies {
 // https://mvnrepository.com/artifact/org.apache.mahout/mahout-core
 	implementation 'org.apache.mahout:mahout-core:0.9'
 	implementation 'org.apache.commons:commons-csv:1.8'
+
+	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4'
 }
 
 tasks.named('test') {
