--- a/TCPharmacyBackend/build.gradle
+++ b/TCPharmacyBackend/build.gradle
@@ -66,6 +66,9 @@ dependencies {
 	implementation 'org.apache.commons:commons-csv:1.8'
 
 	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4'
+
+	implementation 'io.github.cdimascio:java-dotenv:5.2.2'
+
 }
 
 tasks.named('test') {
