Prepare to deploy

--- a/TCPharmacyBackend/src/main/resources/application.properties
+++ b/TCPharmacyBackend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.servlet.context-path=/tc/api
 spring.application.name=TCPharmacyBackend
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/pharmacies
-spring.datasource.username=root
-spring.datasource.password=sapassword
+spring.datasource.url=${MARIADB_URL}
+spring.datasource.username=${MARIADB_USERNAME}
+spring.datasource.password=${MARIADB_PASSWORD}
 
 server.port=9090
 spring.jpa.show-sql=true
