--- a/TCPharmacyBackend/src/main/resources/application.properties
+++ b/TCPharmacyBackend/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 chatgpt.model=gpt-3.5-turbo-1106
-
+chatgpt.open.api.key=${OPEN_API_KEY}
 chatgpt.assistants=https://api.openai.com/v1/assistants
 chatgpt.threads=https://api.openai.com/v1/threads
 chatgpt.assistant.id=asst_knW06tfTd1ofGEDCKF9SHC0N
