Updated: Change url backend tcpharmacy-tcenviroment.up.railway.app

--- a/TCPharmacyFrontend/app.json
+++ b/TCPharmacyFrontend/app.json
@@ -18,10 +18,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.ledonchung398.TCPharmacyFrontend"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "0ac679e3-e7e2-49a3-83da-a7567406b57b"
+      }
     }
   }
 }
