--- a/TCPharmacyBackend/src/main/resources/application.properties
+++ b/TCPharmacyBackend/src/main/resources/application.properties
@@ -5,11 +5,15 @@ spring.datasource.url=${MARIADB_URL}
 spring.datasource.username=${MARIADB_USERNAME}
 spring.datasource.password=${MARIADB_PASSWORD}
 
+# SMS API
+SMS_API_KEY=${SMS_API_KEY}
+SMS_API_SECRECT=${SMS_API_SECRECT}
+
 server.port=9090
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-
+# OpenAI
 chatgpt.model=gpt-3.5-turbo-1106
 chatgpt.open.api.key=${OPEN_API_KEY}
 chatgpt.assistants=https://api.openai.com/v1/assistants
